still working on class functionality

--- a/K-Cluster_base.ipynb
+++ b/K-Cluster_base.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,15 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-059c32600505>, line 41)",
+     "evalue": "invalid syntax (<ipython-input-3-5e5f9dbeaff4>, line 42)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-059c32600505>\"\u001b[0;36m, line \u001b[0;32m41\u001b[0m\n\u001b[0;31m    self.x+=1\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-5e5f9dbeaff4>\"\u001b[0;36m, line \u001b[0;32m42\u001b[0m\n\u001b[0;31m    x += 1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -106,7 +106,8 @@
     "        return z_data\n",
     "        \n",
     "\n",
-    "\n",
+    "class Visualization(DataGeneration):\n",
+    "    \n",
     "    def visualize(self, dist_vals):\n",
     "        if len(dist_vals[0]) != num_weeks:\n",
     "            print(\"num_weeks does not match requested generation iterations!\")\n",
@@ -114,7 +115,7 @@
     "\n",
     "        data = []\n",
     "        \n",
-    "        \n",
+    "        x = 0\n",
     "        while x != (self.num_weeks + 1):\n",
     "            \n",
     "            data.append(generate_x(dist_vals[x][0][0], dist_vals[x][0][1]),\n",
