fixed synax for Rosey

--- a/K-Cluster_base.ipynb
+++ b/K-Cluster_base.ipynb
@@ -39,44 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def func():\n",
-    "    x = 0\n",
-    "    print(x)\n",
-    "    while x != 5:\n",
-    "        x+=1\n",
-    "        print(x)\n",
-    "\n",
-    "func()    \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-5e5f9dbeaff4>, line 42)",
+     "evalue": "'break' outside loop (<ipython-input-1-c05d83152cbc>, line 36)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-5e5f9dbeaff4>\"\u001b[0;36m, line \u001b[0;32m42\u001b[0m\n\u001b[0;31m    x += 1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c05d83152cbc>\"\u001b[0;36m, line \u001b[0;32m36\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'break' outside loop\n"
      ]
     }
    ],
@@ -104,6 +84,8 @@
     "        z_data = [random.uniform(dist_min,dist_max) for i in range(self.num_datapoints)] \n",
     "\n",
     "        return z_data\n",
+    "    \n",
+    "    \n",
     "        \n",
     "\n",
     "class Visualization(DataGeneration):\n",
@@ -119,8 +101,8 @@
     "        while x != (self.num_weeks + 1):\n",
     "            \n",
     "            data.append(generate_x(dist_vals[x][0][0], dist_vals[x][0][1]),\n",
-    "                        generate_y(generate_x(dist_vals[x][1][0], dist_vals[x][1][1]), \n",
-    "                        generate_z(generate_x(dist_vals[x][2][0], dist_vals[x][2][1])  \n",
+    "                        generate_y(generate_x(dist_vals[x][1][0], dist_vals[x][1][1])), \n",
+    "                        generate_z(generate_x(dist_vals[x][2][0], dist_vals[x][2][1])))  \n",
     "            \n",
     "            x += 1\n",
     "            \n",
